0.1631
  added experimental DBIx::Custom::Result end_filter method
  experimental extended select method's where option
  fix select method empty where failed bug
0.1630
  fix test bug
0.1629
  renamed auto_filter to apply_filter
  changed apply_filter method arguments
  deprecated cache_method
0.1628
  remove DBIx::Custom::Model
  move table method and table_class attribute to DBIx::Custom
  added examples
  fixed connect method bug
0.1627
  added insert, update, update_all, delete, delete_all, select method to DBIx::Custom::Table
  added experimental txn_scope
0.1626
  simplified DBIx::Custom::Model and DBIx::Custom::Table
0.1625
  added experimental DBIx::Custom::Model and DBIx::Custom::Table
0.1624
  added experimental iterate_all_columns method.
0.1623
  added experimental auto_filter method
  deprecated default_bind_filter and default_fetch_filter because these are global effect.
  changed defautl_bind_filter and default_fetch_filter attributes to methods.
  changed DBIx::Custom::Result default_filter attribute to method
  changed DBIx::Custom::Result filter attribute to method.
  filter_check is always done for usability
0.1622
  deprecated DBIx::Custom::SQLite and DBIx::Custom::MySQL
  added dbi_options attribute
  checked attributes passed to connect method
0.1621
  cleanup (removed undocumented features)
0.1620
  updated document
0.1619
  updated document
  added experimental expand method
0.1618
  added helper method
  added begin_work, commit, and rollback method
0.1617
  L<DBIx::Custom> is now stable. APIs keep backword compatible in the feature.
0.1616
  removed experimental register_method(), and methods attribute, because it is too magical
0.1615
  fixed DBIx::Custom::QueryBuilder build_query() bug
  required Perl 5.008001 to use @CARP_NOT 
0.1614
  removed DBIx::Custom::Query start_tag and end tag attributes
  enable escaping '{' and '}' in the source of SQL
  fixed Carp Carp trust relationship
0.1613
  added experimental register_method() method